--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	
 		/*the above is a very basic reset rule.  Every browser has a slightly different default for HTML tags.  By using this simple CSS reset, all the more glaring styles 
 		are reset and can now be set to whatever properties that would suit your website best. */
+
+		/* THIS IS A CHANGE MADE BY PRIS. */ 
 	
 	body{
 		background:#eaf8fb;	/* a light blue background color. */
